<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.appzollo.profilefragments.PlanStickerClick" >
    <item android:id="@+id/action_edit"
        android:title="@string/edit"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_offline"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_wrong_location"
        android:title="@string/wrong_location_tag"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_report"
        android:title="@string/report_abuse"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
