<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sticker_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:background="@drawable/middle_pannel_bg"
    android:orientation="vertical"
    >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:gravity="right"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_events"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/events"
                android:text="@string/bt_events"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="right"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/iv_bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bus"
                android:padding="5dp"
                android:src="@drawable/bus_icon" />

            <ImageView
                android:id="@+id/iv_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/food"
                android:padding="5dp"
                android:src="@drawable/food_icon" />

            <ImageView
                android:id="@+id/iv_bed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/bed"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/bed_icon" />
        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:indeterminate="true" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Approx Price "
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_amt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Rs 3000"
            android:textColor="#999"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:background="#999" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/tv_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5 nights and 2 days"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/marker_icon"
                android:drawablePadding="5dp"
                android:text="Hill forest,"
                android:textSize="16sp"
                android:textStyle="bold"
                android:padding="2dp" />

            <TextView
                android:id="@+id/tv_place_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Udaipur, India"
                android:padding="2dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="21 Jan 2014 - \n 25 Jan2015"
            android:textSize="16sp"
            android:textStyle="bold"
            android:padding="2dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:paddingBottom="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_bar"
            android:paddingLeft="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_centerInParent="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="55dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Divya Parihar"
                        android:id="@+id/tv_name"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2 hrs ago"
                        android:id="@+id/tv_last_active" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="40dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/iv_broadcast"
                        android:src="@drawable/speaker_icon" />

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:paddingLeft="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Broadcasted"
                            android:id="@+id/tv_broadcasted"
                            android:textColor="#999"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="near Delhi"
                            android:id="@+id/tv_cast_place" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <ImageView
            android:id="@+id/iv_profile_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/profile_icon_border"
            android:src="@drawable/profile_icon_border_mask"
            android:layout_gravity="left|top"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/bt_interest"
                android:drawableLeft="@drawable/interest_icon"
                android:background="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show Interest"
                android:id="@+id/tv_interest"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:id="@+id/bt_comment"
                android:clickable="false"
                android:drawableLeft="@drawable/comment_icon"
                android:background="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comment"
                android:id="@+id/tv_comment"
                android:clickable="false"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
